SDFSOF-44 - Fixed review comments